added ability to read config from .xml

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,13 +8,16 @@
 cmake_minimum_required(VERSION 2.8.4 FATAL_ERROR)
 
 #C++-based project
-project(cdf_hpx CXX)
+project(cfd_hpx CXX)
 
 find_package(HPX)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src/ /home/troska/opt/hpx_0.9.11/include 
 			/home/troska/opt/boost_1_54_0/include
-			/home/troska/opt/hwloc-1.11.1/include)
+			/home/troska/opt/hwloc-1.11.1/include
+			${CMAKE_CURRENT_SOURCE_DIR}/libs)
+
+add_library(pugixml ${CMAKE_CURRENT_SOURCE_DIR}/libs/pugixml/pugixml.cpp)
 
 add_hpx_component(partition_server
     SOURCES src/grid/server/partition_server.cpp
@@ -22,5 +25,7 @@ add_hpx_component(partition_server
 
 add_hpx_executable(debug
     ESSENTIAL
-    SOURCES src/debug.cpp
+    SOURCES src/debug.cpp src/io/config_reader.cpp
+    DEPENDENCIES pugixml
     COMPONENT_DEPENDENCIES iostreams partition_server)
+
