--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,10 +29,11 @@ add_hpx_component(
     HEADERS src/grid/server/partition_server.hpp
 )
 
-add_hpx_component(stepper_server
+add_hpx_component(
+    stepper_server
     SOURCES src/stepper/server/stepper_server.cpp
     HEADERS src/stepper/server/stepper_server.hpp
-    COMPONENT_DEPENDENCIES iostreams)
+    COMPONENT_DEPENDENCIES iostreams partition_server)
 
 add_hpx_executable(
     main
