added cgs::compute_rhs and corresponding test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,5 +97,14 @@ add_hpx_executable(
 )
 add_test(cgs_compute_fg_test  test_cgs_compute_fg)
 
+# cgs::compute_rhs()
+
+add_hpx_executable(
+    test_cgs_compute_rhs
+    ESSENTIAL
+    SOURCES tests/test_cgs_compute_rhs.cpp src/computation/custom_grain_size.cpp
+    COMPONENT_DEPENDENCIES partition_server
+)
+add_test(cgs_compute_rhs_test  test_cgs_compute_rhs)
 
 
