Add flag to suppress compile warnings from HPX

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src/
 			${CMAKE_CURRENT_SOURCE_DIR}/libs
 			)
 
-add_compile_options(-std=c++14)
+add_compile_options(-std=c++14 -Wno-deprecated-declarations)
 
 add_library(pugixml ${CMAKE_CURRENT_SOURCE_DIR}/libs/pugixml/pugixml.cpp)
 add_library(config src/io/config.cpp)
