Add blockwise Jacobi solver and cancellation token

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,28 +25,56 @@ add_library(config src/io/config.cpp)
 target_link_libraries(config pugixml)
 
 # --------------- MAIN --------------- #
-
 add_hpx_component(
-    partition_server
-    SOURCES src/grid/server/partition_server.cpp src/io/writer.cpp
-    HEADERS src/grid/server/partition_server.hpp src/io/writer.hpp
+    cancellation_token
+    SOURCES src/util/server/cancellation_token_server.cpp
+    HEADERS  src/util/server/cancellation_token_serve.hpp
 )
 
 add_hpx_component(
-    stepper_server
+    partition_server_jacobi
+    SOURCES src/grid/server/partition_server.cpp src/io/writer.cpp
+    HEADERS src/grid/server/partition_server.hpp src/io/writer.hpp
+    COMPONENT_DEPENDENCIES cancellation_token
+)
+
+add_hpx_component(
+    stepper_server_jacobi
     SOURCES src/stepper/server/stepper_server.cpp
     HEADERS src/stepper/server/stepper_server.hpp
-#    COMPILE_FLAGS -DCUSTOM_GRAIN_SIZE
-    COMPONENT_DEPENDENCIES iostreams partition_server)
+    COMPONENT_DEPENDENCIES partition_server_jacobi
+)
 
 add_hpx_executable(
-    nast_hpx
+    nast_hpx_jacobi
     ESSENTIAL
     SOURCES src/nast_hpx.cpp
     DEPENDENCIES config
-    COMPONENT_DEPENDENCIES stepper_server
+    COMPONENT_DEPENDENCIES stepper_server_jacobi
 )
 
+add_hpx_component(
+    partition_server_sor
+    COMPILE_FLAGS -DWITH_SOR
+    SOURCES src/grid/server/partition_server.cpp src/io/writer.cpp
+    HEADERS src/grid/server/partition_server.hpp src/io/writer.hpp
+    COMPONENT_DEPENDENCIES cancellation_token
+)
+
+add_hpx_component(
+    stepper_server_sor
+    SOURCES src/stepper/server/stepper_server.cpp
+    HEADERS src/stepper/server/stepper_server.hpp
+    COMPONENT_DEPENDENCIES partition_server_sor
+)
+
+add_hpx_executable(
+    nast_hpx_sor
+    ESSENTIAL
+    SOURCES src/nast_hpx.cpp
+    DEPENDENCIES config
+    COMPONENT_DEPENDENCIES stepper_server_sor
+)
 #add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND} --verbose)
 
 #add_hpx_executable(
