Address compiler warnings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src/
 			${CMAKE_CURRENT_SOURCE_DIR}/libs
 			)
 
-add_compile_options(-std=c++14 -Wno-deprecated-declarations)
+add_compile_options(-std=c++14 -Wall -Wextra -Wno-unused-parameter)
 
 add_library(pugixml ${CMAKE_CURRENT_SOURCE_DIR}/libs/pugixml/pugixml.cpp)
 add_library(config src/io/config.cpp)
@@ -26,22 +26,22 @@ target_link_libraries(config pugixml)
 
 # --------------- MAIN --------------- #
 add_hpx_component(
-    partition_server_jacobi
+    partition_server
     SOURCES src/grid/server/partition_server.cpp src/io/writer.cpp
     HEADERS src/grid/server/partition_server.hpp src/io/writer.hpp
 )
 
 add_hpx_component(
-    stepper_server_jacobi
+    stepper_server
     SOURCES src/stepper/server/stepper_server.cpp
     HEADERS src/stepper/server/stepper_server.hpp
-    COMPONENT_DEPENDENCIES partition_server_jacobi
+    COMPONENT_DEPENDENCIES partition_server
 )
 
 add_hpx_executable(
-    nast_hpx_jacobi
+    nast_hpx
     ESSENTIAL
     SOURCES src/nast_hpx.cpp
     DEPENDENCIES config
-    COMPONENT_DEPENDENCIES stepper_server_jacobi
+    COMPONENT_DEPENDENCIES stepper_server
 )
