Remove jacobi prefix from executable

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,22 +26,22 @@ target_link_libraries(config pugixml)
 
 # --------------- MAIN --------------- #
 add_hpx_component(
-    partition_server_jacobi
+    partition_server
     SOURCES src/grid/server/partition_server.cpp src/io/writer.cpp
     HEADERS src/grid/server/partition_server.hpp src/io/writer.hpp
 )
 
 add_hpx_component(
-    stepper_server_jacobi
+    stepper_server
     SOURCES src/stepper/server/stepper_server.cpp
     HEADERS src/stepper/server/stepper_server.hpp
-    COMPONENT_DEPENDENCIES partition_server_jacobi
+    COMPONENT_DEPENDENCIES partition_serveri
 )
 
 add_hpx_executable(
-    nast_hpx_jacobi
+    nast_hpx
     ESSENTIAL
     SOURCES src/nast_hpx.cpp
     DEPENDENCIES config
-    COMPONENT_DEPENDENCIES stepper_server_jacobi
+    COMPONENT_DEPENDENCIES stepper_server
 )
